--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: #dedede;
 }
@@ -18,16 +17,13 @@ a {
 p {
    font-size: 25px;
    font-family:Arial, sans-serif;
+   text-align:center;
 }
 
-img{
+img {
   width:100%;
 }
 
-
-p{
-  text-align:center;
-}
 
 div img{
     width:150px;
@@ -40,24 +36,31 @@ div{
   display: inline-block;
   width: 24%;
   margin: 5px;
-  padding: 2px;
+  padding: 2px
+  vertical-align: top;
 }
+
+main {
+    text-align: center; 
+    padding: 10px;
+}
+
 
 @media (min-width: 772px) {
     div {
-        width: 45vw; 
+        width: 45vw;
     }
 
     div img {
-        max-height: 30vh; 
+        max-height: 30vh;
         width: auto; 
-        height: auto; 
+        height: auto;
     }
 }
 
-@media (min-width: 998px) { 
+@media (min-width: 998px) {
     div {
-        width: 30vw; 
+        width: 30vw;
     }
 }
 
