--- a/style1.css
+++ b/style1.css
@@ -4,161 +4,128 @@ body {
 
 h1 {
     text-align: center;
-    font-family:Arial, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 32px;
 }
 
 a {
     color: #000;
     text-decoration: none;
-    font-family:Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 p {
    font-size: 25px;
-   font-family:Arial, sans-serif;
-   text-align:center;
+   font-family: Arial, sans-serif;
+   text-align: center;
 }
 
 img {
   width:100%;
 }
 
-
-div img{
-    width:150px;
-    height: 150px;
-    display:block;
-    margin:auto;
+div img {
+    width: 150px;
+    height: 150px; 
+    display: block; 
+    margin: auto; 
 }
 
-div{
-  display: inline-block;
-  width: 24%;
+div {
+  display: inline-block; 
+  width: 24%; 
   margin: 5px;
-  padding: 2px
-  vertical-align: top;
+  padding: 2px;
+  vertical-align: top; 
 }
 
 main {
-    text-align: center; 
+    text-align: center;
     padding: 10px;
 }
 
-
-@media (min-width: 772px) {
+@media (min-width: 772px) { 
     div {
-        width: 45vw;
+        width: 45vw; 
+        display: inline-block; 
     }
 
     div img {
-        max-height: 30vh;
+        max-height: 30vh; 
         width: auto; 
-        height: auto;
+        height: auto; 
     }
 }
 
-@media (min-width: 998px) {
+@media (min-width: 998px) { 
     div {
-        width: 30vw;
+        width: 30vw; 
     }
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
 main {
     border: 5px #000 solid;
     margin: 10px;
 }
  */
-/* 
 
 .container {
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
 }
- */
-/* img{
+
+img{
     width: 200px;
     height: 200px;
     padding: 5px;
-} */
+}
 
-/* .child {
+.child {
     position: relative;
     display: inline-block;
     border: 5px black solid;
     margin: 5px;
     border-radius: 5px;
-} */
-
-/* 
+}
 
 .label {
     display: none;
     position: absolute;
     top: 40%;
     left: 40%;
-} */
-/* 
+}
+
 .button {
     display: inline-block;
     border: 2px solid #000;
     padding: 5px;
     border-radius: 25px;
 }
- */
-/* 
+
 .button:hover {
     background-color:#fff;
-} */
+}
 
-/* 
 footer {
     display: flex;
     justify-content: center;
-} */
+}
 
-/* 
 header {
     border-radius: 5px;
     border: 5px #000 solid;
     margin: 10px;
-} */
+}
 
-/* 
 .label {
     display: none;
     position: absolute;
     top: 40%;
     left: 40%;
-} */
-/* 
+}
+
 .child:hover .label {
     display: block;
-} */
+}
