--- a/style1.css
+++ b/style1.css
@@ -1,100 +1,80 @@
 
 body {
     background-color: #dedede;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+h1, h2 {
+    text-align: center;
+    font-family: Arial, sans-serif;
 }
 
 h1 {
-    text-align: center;
-    font-family:Arial, sans-serif;
     font-size: 32px;
+    margin-top: 20px;
+}
+
+h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+p, li {
+    font-size: 20px;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    line-height: 1.6;
+    margin: 10px auto;
+    max-width: 900px;
+}
+
+ul {
+    list-style-position: inside;
+    padding: 0;
+    margin: 0 auto 20px auto;
+    max-width: 900px;
 }
 
 a {
     color: #000;
     text-decoration: none;
-    font-family:Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
-p {
-   font-size: 25px;
-   font-family:Arial, sans-serif;
+div {
+    display: block;
+    width: 90%;
+    margin: 10px auto;
+    padding: 2px;
+    box-sizing: border-box;
 }
 
-img{
-  width:100%;
-}
-
-
-p{
-  text-align:center;
-}
-
-div img{
-    width:150px;
-    height: 150px;
-    display:block;
-    margin:auto;
-}
-
-div{
-  display: inline-block;
-  width: 24%;
-  margin: 5px;
-  padding: 2px;
+div img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
 }
 
 main {
-    border: 5px #000 solid;
+    text-align: center;
+    padding: 20px;
     margin: 10px;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-}
-
-img{
-    width: 200px;
-    height: 200px;
-    padding: 5px;
-}
-
-.child {
-    position: relative;
-    display: inline-block;
-    border: 5px black solid;
-    margin: 5px;
-    border-radius: 5px;
-}
-
-.label {
-    display: none;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-}
-
-.button {
-    display: inline-block;
-    border: 2px solid #000;
-    padding: 5px;
-    border-radius: 25px;
-}
-
-.button:hover {
-    background-color:#fff;
 }
 
 footer {
     display: flex;
     justify-content: center;
+    margin: 20px 0;
 }
 
 header {
     border-radius: 5px;
     border: 5px #000 solid;
     margin: 10px;
+    padding: 10px 0;
 }
 
 .label {
@@ -109,21 +89,22 @@ header {
 }
 
 @media (min-width: 772px) {
-  div {
-    width: 45vw;
-    display: inline-block;
-    vertical-align: top;
-  }
+    div {
+        width: 45vw;
+        display: inline-block;
+        vertical-align: top;
+        margin: 10px;
+    }
 
-  div img {
-    max-height: 30vh;
-    width: 100%;
-    object-fit: cover;
-  }
+    div img {
+        max-height: 30vh;
+        width: 100%;
+        object-fit: cover;
+    }
 }
 
 @media (min-width: 998px) {
-  div {
-    width: 30vw;
-  }
+    div {
+        width: 30vw;
+    }
 }
