--- a/style1.css
+++ b/style1.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 p, li {
-    font-size: 20px;
+    font-size: 25px;
     font-family: Arial, sans-serif;
     text-align: center;
     line-height: 1.6;
@@ -79,7 +79,7 @@ header {
 
 .label {
     display: none;
-    position: absolute;
+    position: center;
     top: 40%;
     left: 40%;
 }
