--- a/style1.css
+++ b/style1.css
@@ -78,11 +78,13 @@ header {
 }
 
 .label {
-    display: block;
-    font-size: 18px;
-    text-align: center;
-    margin-top: 10px;
-    color: #000;
+  display: block;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 8px;
+  font-weight: bold;
+  text-transform: capitalize;
+  color: #000;
 }
 
 .child:hover .label {
