--- a/css/style1.css
+++ b/css/style1.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 p, li {
-    font-size: 20px;
+    font-size: 25px;
     font-family: Arial, sans-serif;
     text-align: center;
     line-height: 1.6;
@@ -78,10 +78,13 @@ header {
 }
 
 .label {
-    display: none;
-    position: absolute;
-    top: 40%;
-    left: 40%;
+  display: block;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 8px;
+  font-weight: bold;
+  text-transform: capitalize;
+  color: #000;
 }
 
 .child:hover .label {
